--- a/feira_flores/core/templates/home.html
+++ b/feira_flores/core/templates/home.html
@@ -68,6 +68,65 @@
             </nav>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center mt-4 mb-3">
+                Feira de Flores
+            </h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="carousel slide" id="carousel-287834">
+                <ol class="carousel-indicators">
+                    <li data-slide-to="0" data-target="#carousel-287834" class="active">
+                    </li>
+                    <li data-slide-to="1" data-target="#carousel-287834">
+                    </li>
+                    <li data-slide-to="2" data-target="#carousel-287834">
+                    </li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
+                        <div class="carousel-caption">
+                            <h4>
+                                First Thumbnail label
+                            </h4>
+                            <p>
+                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
+                        <div class="carousel-caption">
+                            <h4>
+                                Second Thumbnail label
+                            </h4>
+                            <p>
+                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
+                        <div class="carousel-caption">
+                            <h4>
+                                Third Thumbnail label
+                            </h4>
+                            <p>
+                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                            </p>
+                        </div>
+                    </div>
+                </div> <a class="carousel-control-prev" href="#carousel-287834" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-287834" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-4">
             <h2>
@@ -104,6 +163,20 @@
         </div>
     </div>
 </div>
+
+<footer class="main-footer mt-5 text-light bg-secondary">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h3 class="mt3">Entre em contato</h3>
+                <address class="main-address">
+                    +55 88 98765-4321<br/>
+                    <a href="mailto:contato@feiraflores.com.br" class="text-light">contato@feiraflores.com.br</a>
+                </address>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
