--- a/feira_flores/core/templates/base.html
+++ b/feira_flores/core/templates/base.html
@@ -16,25 +16,22 @@
 </head>
 <body>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="/">Feira de Flores</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contato">Contato</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Feira de Flores</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/contato/">Contato</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'plants:index' %}">Plantas</a>
+            </li>
+        </ul>
     </div>
-</div>
+</nav>
 
 {% block content %}{% endblock content %}
 
